# Thefetcher

./: .gitignore  Implementation-plan.md  README.md  Thefetchersystemprompt.md  certificate.md  mcp_config.json  package-lock.json  package.json  privatekey.md  publickey.md  searxng-settings.yml
src/: App.vue  main.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppLogo.vue  LiveLog.vue  RequestInput.vue  SearchResults.vue  SettingsModal.vue
src/stores/: agent.ts
